# my_library

./: CMakeLists.txt  LICENSE  README.md
doc/: Advanced.md  Basics.md
include/my_library/: my_template.hpp
tests/: CMakeLists.txt  main.cpp.in  my_test.cpp
tests/cmake/: MakeEasyTest.cmake
